feat: Add Kubernetes deployment and fix production issues
🚀 Kubernetes Deployment:
- Add complete K8s manifests for 3-tier architecture (DB/Backend/Frontend)
- Configure MariaDB with persistent storage (5GB PVC)
- Set up Spring Boot backend with 2 replicas and health checks
- Deploy React frontend with Nginx reverse proxy (2 replicas)
- Add ConfigMaps and Secrets for environment configuration
- Configure NodePort service for external access (port 30080)

🔧 Backend Improvements:
- Add CORS configuration for frontend-backend communication
- Configure Jackson timezone serialization (Europe/Warsaw)
- Update phone validation pattern to allow spaces in format
- Fix Actuator health endpoints to work without authentication
- Add proper timezone handling for LocalDateTime fields
- Configure Hibernate JDBC timezone to Europe/Warsaw

🎨 Frontend Enhancements:
- Fix API base URL configuration for Kubernetes (/api proxy)
- Update useRole hook to work with username-based role detection
- Fix CustomerList navigation with useNavigate hook
- Improve date formatting to display time with seconds
- Add proper timezone handling in date display components
- Fix authentication flow and localStorage management

🐳 Docker & DevOps:
- Create production-ready multi-stage Dockerfile for backend
- Add Nginx-based Dockerfile for frontend with health checks
- Configure nginx.conf with API proxy to backend service
- Add build and deployment automation scripts
- Set up proper image pull policy for local development

📝 Configuration:
- Update application-prod.properties with timezone settings
- Configure CORS to allow requests from NodePort (30080)
- Set up proper database connection pooling (HikariCP)
- Add Liquibase migrations support in production
- Configure proper logging levels for production

🔒 Security:
- Maintain Spring Security with Basic Auth (3 roles: USER/MANAGER/ADMIN)
- Keep RBAC implementation for frontend components
- Secure Actuator endpoints while allowing health checks
- Implement 